handle fetching data from github api

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>home</h1>
+    <a href="http://localhost:9000/github/pure-repos-list">pure</a>
+    <br/>
+    <a href="http://localhost:9000/github/lg-list">list lang</a>
 </body>
 </html>
